--- a/jguandinangos7/Vistas/ConsultaRegistros.xaml
+++ b/jguandinangos7/Vistas/ConsultaRegistros.xaml
@@ -4,9 +4,18 @@
              x:Class="jguandinangos7.Vistas.ConsultaRegistros">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="LISTA DE ESTUDIANTES" FontSize="18" HorizontalTextAlignment="Center" />
+            <ListView x:Name="ListaEstudiantes" ItemSelected="ListaEstudiantes_ItemSelected">
+                <ListView.ItemTemplate>
+
+                    <DataTemplate>
+                        <TextCell Text="{Binding Nombre}" Detail="{Binding Usuario}"/>
+
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                
+            </ListView>
+            <Button x:Name="btnSalir" Text="Salir" Clicked="btnSalir_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
